# surrealdb-actix-graphql

./: Cargo.toml  README.md
src/: error.rs  main.rs  prelude.rs
src/config/: surrealdb.rs
src/handler/: graphql_handler.rs
src/schemas/: mod.rs  project_schemas.rs
