[package]
name = "surrealdb-actix-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = { version = "4.0", features = ["bson", "chrono"] }
async-graphql-actix-web = "4.0"
serde = "1.0.136"
thiserror = "1"
dotenv = "0.15.0"
futures = "0.3"
surrealdb = {version = "1.0.0-beta.8", default-features=false, features = ['parallel', 'kv-rocksdb'] }